# StarTracer

./: .coverage  .readthedocs.yaml  LICENSE  README.ipynb  README.md  pyproject.toml  pythoncodeblocks.tpl  requirements.txt
.github/workflows/: workflow_TestOnPush.yml
2Delete/: Playground_SkyCoordOrbit.py  backup.py  startracer_old.py
Data/: CrAChain_eRV1_stars_MC.csv
StarTracer/: __init__.py  example.py  fnct_traceback.py  make_example_cluster.py  new_plan.txt  separation.py  startracer.py
StarTracer/example_data/: ExampleCluster.csv  ExampleCluster.fits  ExampleCluster_1.csv  ExampleCluster_1.fits  ExampleCluster_2.csv  ExampleCluster_2.fits  make_example_cluster.py
docs/source/: conf.py  index.rst  startracer.rst
test/: README.md  test_check_errors.py  test_cluster_sampling.py  test_cluster_separation.py  test_errors.py  test_miscellaneous.py  test_stars_sampling.py
